--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&display=swap');
 
 /* Write your global styles here, in PostCSS syntax */
 @tailwind base;
@@ -6,6 +6,6 @@
 @tailwind utilities;
 
 body {
-	font-family: 'Inter', sans-serif;
+	font-family: 'Dosis', sans-serif;
 	overflow: hidden;
 }
